adding DNS and Vue links

--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
           >
         </li>
 
+        <!-- VUE -->
+        <h2 class="usefull-links_topic-title">Vue</h2>
+        <li class="links">
+          <a
+            class="link-1"
+            href="https://www.pluralsight.com/courses/vue-getting-started"
+            target="_blank"
+            >Plural Sight</a
+          >
+        </li>
+        <li class="links">
+          <a
+            class="link-2"
+            href="https://www.youtube.com/watch?v=qZXt1Aom3Cs&t=948s&pp=ugMICgJwdBABGAE%3D&ab_channel=TraversyMedia"
+            target="_blank"
+            >Traversy Vue Crash Course</a
+          >
+        </li>
+
+        <!-- DNS -->
+        <h2 class="usefull-links_topic-title">DNS</h2>
+        <li class="links">
+          <a
+            class="link-1"
+            href="https://www.youtube.com/watch?v=wATxftE8ooE&ab_channel=GoogleSearchCentral"
+            target="_blank"
+            >Changing your Domain Name</a
+          >
+        </li>
+
         <!-- DESIGN -->
         <h2 class="usefull-links_topic-title">Design Resources</h2>
 
