adding nuxt, adding web-designer question section and adding first web-designer question, fixing class-name of links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2 class="usefull-links_topic-title">Vue</h2>
         <li class="links">
           <a
-            class="link-1"
+            class="link-3"
             href="https://www.pluralsight.com/courses/vue-getting-started"
             target="_blank"
             >Plural Sight</a
@@ -56,18 +56,24 @@
         </li>
         <li class="links">
           <a
-            class="link-2"
+            class="link-4"
             href="https://www.youtube.com/watch?v=qZXt1Aom3Cs&t=948s&pp=ugMICgJwdBABGAE%3D&ab_channel=TraversyMedia"
             target="_blank"
             >Traversy Vue Crash Course</a
           >
         </li>
 
+        <!-- Nuxt -->
+        <h2>NUXT</h2>
+        <li class="links">
+          <a href="https://masteringnuxt.com/" class="link-5">Mastering Nuxt</a>
+        </li>
+
         <!-- DNS -->
         <h2 class="usefull-links_topic-title">DNS</h2>
         <li class="links">
           <a
-            class="link-1"
+            class="link-6"
             href="https://www.youtube.com/watch?v=wATxftE8ooE&ab_channel=GoogleSearchCentral"
             target="_blank"
             >Changing your Domain Name</a
@@ -81,25 +87,25 @@
         <h3 class="usefull-links_topic-subtitle">Colors</h3>
         <li class="links">
           <a
-            class="link-1"
+            class="link-7"
             href="https://github.com/bradtraversy/design-resources-for-developers#icon-fonts"
             target="_blank"
             >Traversy Github</a
           >
         </li>
         <li class="links">
-          <a class="link-2" href="https://tinypng.com/" target="_blank"
+          <a class="link-8" href="https://tinypng.com/" target="_blank"
             >Tiny PNG</a
           >
         </li>
         <li class="links">
-          <a class="link-3" href="https://flatuicolors.com/" target="_blank"
+          <a class="link-9" href="https://flatuicolors.com/" target="_blank"
             >Color Palettes</a
           >
         </li>
         <li class="links">
           <a
-            class="link-4"
+            class="link-10"
             href="https://color.adobe.com/pt/explore"
             target="_blank"
             >Adobe Color Palettes</a
@@ -107,20 +113,20 @@
         </li>
         <li class="links">
           <a
-            class="link-5"
+            class="link-11"
             href="https://color.adobe.com/pt/create/color-wheel"
             target="_blank"
             >Adobe Color Wheel</a
           >
         </li>
         <li class="links">
-          <a class="link-6" href="https://www.color-hex.com/" target="_blank"
+          <a class="link-12" href="https://www.color-hex.com/" target="_blank"
             >Color Hex</a
           >
         </li>
         <li class="links">
           <a
-            class="link-7"
+            class="link-13"
             href="https://uigradients.com/#WhatliesBeyond"
             target="_blank"
             >Gradients</a
@@ -130,33 +136,41 @@
         <!-- ICONS -->
         <h3 class="usefull-links_topic-subtitle">Icons</h3>
         <li class="links">
-          <a class="link-7" href="https://undraw.co/search" target="_blank"
+          <a class="link-14" href="https://undraw.co/search" target="_blank"
             >Undraw</a
           >
         </li>
         <li class="links">
-          <a class="link-7" href="https://thenounproject.com/" target="_blank"
+          <a class="link-15" href="https://thenounproject.com/" target="_blank"
             >Noun Project</a
           >
         </li>
         <li class="links">
-          <a class="link-7" href="https://www.freepik.com/" target="_blank"
+          <a class="link-16" href="https://www.freepik.com/" target="_blank"
             >Free Pik</a
           >
         </li>
         <li class="links">
-          <a class="link-7" href="https://www.iconfinder.com/" target="_blank"
+          <a class="link-17" href="https://www.iconfinder.com/" target="_blank"
             >Icon Finder</a
           >
         </li>
         <li class="links">
           <a
-            class="link-7"
+            class="link-18"
             href="https://elements.envato.com/pt-br/"
             target="_blank"
             >Envato Elements</a
           >
         </li>
+
+        <!-- Q.A -->
+        <h3 class="usefull-links_topic-subtitle">Web-Designer Questions</h3>
+        <li class="links">
+          <a class="link-19" href="faq.html"
+            >Image size, porportion and resizing</a
+          >
+
       </ul>
     </section>
     <!-- <script src="assets/js/main.js"></script> -->
