fixing nuxt link > target blank

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           >
         </li>
 
-        <!-- Nuxt -->
-        <h2>NUXT</h2>
+        <!-- NUXT -->
+        <h2>Nuxt</h2>
         <li class="links">
-          <a href="https://masteringnuxt.com/" class="link-5">Mastering Nuxt</a>
+          <a href="https://masteringnuxt.com/" class="link-5" target="_blank">Mastering Nuxt</a>
         </li>
 
         <!-- DNS -->
