--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
         </li>
 
         <!-- NUXT -->
-        <h2>Nuxt</h2>
+        <h2 class="usefull-links_topic-title">Nuxt</h2>
         <li class="links">
-          <a href="https://masteringnuxt.com/" class="link-5" target="_blank">Mastering Nuxt</a>
+          <a href="https://nuxtjs.org/docs/get-started/installation" class="link-5" target="_blank">Installation</a>
+        </li>
+        <li class="links">
+          <a href="https://masteringnuxt.com/" class="link-6" target="_blank">Mastering Nuxt</a>
         </li>
 
         <!-- DNS -->
