renaming web-designer questions to Stack Pedroflow, adding - Duvidas- section, adding file paths doubts

--- a/index.html
+++ b/index.html
@@ -167,12 +167,26 @@
           >
         </li>
 
-        <!-- Q.A -->
-        <h3 class="usefull-links_topic-subtitle">Web-Designer Questions</h3>
+        <!-- Stack Pedro Flow-->
+        <h3 class="usefull-links_topic-subtitle">Stack Pedroflow</h3>
         <li class="links">
           <a class="link-19" href="faq.html"
             >Image size, porportion and resizing</a
           >
+        </li>
+
+        <!-- Dúvidas -->
+        <h3 class="usefull-links_topic-subtitle">Dúvidas</h3>
+        <li class="links">
+          <a class="link-20" href="https://css-tricks.com/quick-reminder-about-file-paths/" target="_blank"
+            >File Paths</a
+          >
+        </li>
+        <li class="links">
+          <a class="link-21" href="https://css-tricks.com/whats-the-difference-between-dogs-html-and-dogs-html/" target="_blank" title="dogs vs .dogs"
+            >./dogs.html vs /dogs.html</a
+          >
+        </li>
 
       </ul>
     </section>
