changing mastering nuxt link from homepage to lessons, adding font converter site

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <a href="https://nuxtjs.org/docs/get-started/installation" class="link-5" target="_blank">Installation</a>
         </li>
         <li class="links">
-          <a href="https://masteringnuxt.com/" class="link-6" target="_blank">Mastering Nuxt</a>
+          <a href="https://masteringnuxt.com/nuxt2/lessons" class="link-6" target="_blank">Mastering Nuxt</a>
         </li>
 
         <!-- DNS -->
@@ -80,6 +80,17 @@
             href="https://www.youtube.com/watch?v=wATxftE8ooE&ab_channel=GoogleSearchCentral"
             target="_blank"
             >Changing your Domain Name</a
+          >
+        </li>
+
+        <!-- Handy Stuff -->
+        <h2 class="usefull-links_topic-title">Handy Stuff</h2>
+        <li class="links">
+          <a
+            class="link-6.1"
+            href="https://transfonter.org/"
+            target="_blank"
+            >Font Converter (ttf to woof etc)</a
           >
         </li>
 
