adding vue2 docs

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         <li class="links">
           <a
             class="link-3"
+            href="https://v2.vuejs.org/v2/guide/"
+            target="_blank"
+            >Documentation Vue2</a
+          >
+        </li>
+        <li class="links">
+          <a
+            class="link-3"
             href="https://www.pluralsight.com/courses/vue-getting-started"
             target="_blank"
             >Plural Sight</a
